# bunting

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  install.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/bunting-cli/: AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
apps/bunting-cli/src/: keymap.rs  local_market.rs  main.rs  native.rs  protocol.rs  theme.rs  ui.rs
apps/bunting-server/: AGENTS.md  Cargo.toml
apps/bunting-server/config/: bunting-local-state.json  cloudflare.json  hosted-native.json  local.json  scenario.json
apps/bunting-server/src/: config.rs  lib.rs  main.rs  relay.rs  runtime.rs  storage.rs
apps/bunting-server/tests/: path_equivalence.rs  tui_tcp_black_box.rs
apps/bunting-tui/: AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
apps/bunting-tui/LICENSES/: cli-candlestick-chart-MIT.txt
apps/bunting-tui/src/: config.rs  io_task.rs  lib.rs  local_market.rs  main.rs  protocol.rs  transport.rs
apps/bunting-tui/src/chart/: candle_set.rs  chart.rs  chart_data.rs  chart_renderer.rs  info_bar.rs  mod.rs  volume_pane.rs  y_axis.rs
apps/bunting-tui/src/tui/: app.rs  keys.rs  mod.rs  nav.rs  popup.rs
apps/bunting-tui/src/tui/render/: mod.rs
apps/bunting-tui/src/tui/ui/: mod.rs  styles.rs
apps/bunting-tui/src/tui/views/: footer.rs  help.rs  market.rs  mod.rs  navbar.rs  orders.rs  popup.rs  workspace.rs
apps/bunting-tui/src/tui/widgets/: candlestick_chart.rs  log_panel.rs  mod.rs
apps/bunting-worker/: AGENTS.md  Cargo.toml  wrangler.toml
apps/bunting-worker/migrations/: 0001_origin_store.sql  0003_session_scoped_command_identity.sql
apps/bunting-worker/src/: d1_origin.rs  fix_session_object.rs  lib.rs  subscriptions.rs
apps/bunting-worker/workerd/: d1-stub.mjs  workerd.capnp
apps/edge-api/: AGENTS.md
apps/trpc-api/: AGENTS.md  Cargo.toml
apps/trpc-api/migrations/: 0002_unified_engine_listing_snapshots.sql
apps/trpc-api/src/: d1_origin.rs  lib.rs  subscriptions.rs
bunting-rs/: AGENTS.md  Cargo.toml
bunting-rs/src/: lib.rs
clients/: AGENTS.md
clients/fix-bridge/: AGENTS.md  Cargo.toml
clients/fix-bridge/src/: lib.rs
clients/nautilus-adapter/: AGENTS.md
clients/python-sdk/: AGENTS.md
clients/ritc-adapter/: AGENTS.md
clients/rust-sdk/: AGENTS.md
crates/: AGENTS.md
crates/agent-models/: AGENTS.md
crates/command-transaction/: AGENTS.md  Cargo.toml
crates/command-transaction/src/: lib.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/market-events/: Cargo.toml
crates/market-making/: AGENTS.md
crates/market-types/: AGENTS.md  Cargo.toml
crates/matching-engine/: AGENTS.md
crates/order-reconciliation/: AGENTS.md
crates/orderbook/: AGENTS.md  Cargo.toml
crates/orderbook/src/: lib.rs
crates/origin-store/: AGENTS.md  Cargo.toml
crates/protocol-legacy-nbc/: AGENTS.md
crates/protocol-native/: AGENTS.md
crates/quarcc-trading-engine/: Cargo.toml
crates/replay-format/: AGENTS.md
crates/risk-engine/: AGENTS.md  Cargo.toml
crates/scenario-engine/: AGENTS.md
crates/scenario-schema/: AGENTS.md
crates/scoring/: AGENTS.md
crates/simfix-mapping/: AGENTS.md
crates/simfix-session/: AGENTS.md
crates/simfix-wire/: AGENTS.md
crates/simulation-clock/: AGENTS.md
crates/test-fixtures/: AGENTS.md
crates/worker-cache/: Cargo.toml
docs/: AGENTS.md  architecture.md  codex-implementation-prompt.md  core-implementation-questions.md  deployment.md  implementation-pathway.md  joaquin-repository-audit.md  orderbook-rs-example-adoption.md  reference-adoption.md  reference-functionality-audit.md  reference-inventory.md  repository-reorganization.md  rust-reference-sprint-map.md
docs/adr/: 0001-pure-rust-kernel.md  0002-one-durable-object-per-run.md  0003-event-sourced-state.md  0004-fix-over-websocket.md  0005-ironfix-vendoring.md  0006-nautilus-native-adapter.md  0007-dynamic-worker-loader-boundary.md  0008-cloudflare-storage-responsibilities.md  0009-fixed-point-numerics.md  0010-scenario-determinism.md  0011-streaming-market-data.md  0012-asynchronous-strategy-dispatch.md  0013-worker-orderbook-rs-kernel.md  0014-market-and-execution-engine-boundaries.md  0015-trpc-api-and-fix-client.md  0016-native-rust-trpc-worker.md  0017-authorized-nbc-jar-port.md  0018-unified-bunting-engine.md  0019-bunting-engine-package-owns-orderbook-rs.md  0020-transport-neutral-engine-and-outbound-fix-tcp.md  0021-fixt11-fix50sp2-dictionary-adoption.md  AGENTS.md
docs/plans/: corrected-bunting-implementation-plan.md  native-rust-trpc-nbc-sprints.md  production-readiness-plan.md  unified-bunting-engine-roadmap.md
docs/ports/: AGENTS.md  nbc-behavior-evidence.md  nbc-evidence-manifest.v1.json  nbc-jar-inventory.v1.tsv  nbc-scenario-catalog.md  nbc-simulation.md  nbc-translation-ledger.v1.tsv  quarcc-trading-engine.md  ritc-market-making.md
docs/prompts/: implement-unified-bunting-engine-foundation.md  initialize-native-rust-trpc-nbc.md
docs/specs/: bunting-fix-competition-profile.md  bunting-product-contract.md  competition-policies-v1.md  rit-class-market-simulation.md  rit-tui-parity-matrix.md
ref/: AGENTS.md
ref/ritc_mm/: Cargo.toml  mlflow.db
ref/ritc_mm/app/: application.yml  simulator.db
ref/ritc_mm/mlruns/1/33d8bd49b8fd45e9be61325bab98995f/artifacts/: microstructure_params.json  microstructure_samples.csv  statsmodels_summary.txt
ref/ritc_mm/mlruns/1/87cbdcb9307f4f6ca9d7e8c38f6f6486/artifacts/: microstructure_params.json  microstructure_samples.csv  statsmodels_summary.txt
ref/ritc_mm/scripts/: calibrate_microstructure.py
ref/ritc_mm/src/: main.rs
scenarios/: AGENTS.md  simulation-domain.v1.json
scenarios/nbc/: AGENTS.md  source-manifest.v1.json
services/: AGENTS.md
tests/: AGENTS.md
tests/oracles/nbc-matcher/: AGENTS.md  Cargo.toml
tests/oracles/nbc-matcher/src/: lib.rs  matching.rs
tests/oracles/nbc-matcher/tests/: matching_conformance.rs
web/: AGENTS.md
workers/: AGENTS.md
workers/edge-api/: AGENTS.md  Cargo.toml  wrangler.toml
workers/edge-api/src/: d1_origin.rs  lib.rs
(+73 files in other folders)
