[workspace]
resolver = "2"
members = [
  "packages/market-types",
  "packages/market-events",
  "packages/bunting-engine",
  "packages/ledger",
  "packages/risk-engine",
  "packages/origin-store",
  "packages/command-transaction",
  "packages/worker-cache",
  "packages/quarcc-trading-engine",
  "packages/bunting-api-contract",
  "packages/trpc-wire",
  "packages/nbc-market-engine",
  "bunting-rs",
  "apps/trpc-api",
]
exclude = ["ref", "vendor", "out"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/andrewkoumoudjian/bunting"

[workspace.dependencies]
bunting-market-events = { path = "packages/market-events" }
bunting-market-types = { path = "packages/market-types" }
bunting-api-contract = { path = "packages/bunting-api-contract" }
bunting-engine = { path = "packages/bunting-engine" }
orderbook-rs = { version = "=0.10.3", default-features = false }
pricelevel = "=0.8.4"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
worker = "=0.8.5"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
float_arithmetic = "warn"
