[package]
name = "bunting-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
bunting-engine.workspace = true
bunting-market-events.workspace = true
bunting-market-types.workspace = true

[lints]
workspace = true
