[package]
name = "bunting-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Unified native Bunting command-line application"

[[bin]]
name = "bunting"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bunting-api-contract.workspace = true
bunting-rs = { path = "../../bunting-rs" }
bunting-server = { path = "../bunting-server" }
bunting-tui = { path = "../bunting-tui" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
