[package]
name = "bunting-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Native Bunting FIX server and Cloudflare FIX session relay"

[dependencies]
bunting-api-contract.workspace = true
bunting-agents = { path = "../../packages/bunting-agents" }
bunting-application.workspace = true
bunting-command-transaction = { path = "../../packages/command-transaction" }
bunting-engine.workspace = true
bunting-market-events.workspace = true
bunting-market-types.workspace = true
bunting-runtime.workspace = true
bunting-origin-store = { path = "../../packages/origin-store" }
quarcc-execution-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
simfix-mapping.workspace = true
simfix-session.workspace = true
simfix-wire.workspace = true

[dev-dependencies]
bunting-risk-engine = { path = "../../packages/risk-engine" }
bunting-tui = { path = "../bunting-tui" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
