[package]
name = "bunting-edge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bunting-api-contract = { path = "../../packages/bunting-api-contract" }
bunting-command-transaction = { path = "../../packages/command-transaction" }
bunting-engine.workspace = true
bunting-market-events.workspace = true
bunting-market-types = { path = "../../packages/market-types" }
bunting-origin-store = { path = "../../packages/origin-store" }
bunting-trpc-wire = { path = "../../packages/trpc-wire" }
bunting-worker-cache = { path = "../../packages/worker-cache" }
serde.workspace = true
serde_json.workspace = true
worker = { workspace = true, features = ["d1"] }

[lints]
workspace = true
