[package]
name = "bunting-fix-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
bunting-api-contract = { path = "../../packages/bunting-api-contract" }
bunting-fix-session = { path = "../../packages/fix-session" }
bunting-fix-tagvalue = { path = "../../packages/fix-tagvalue" }
bunting-trpc-client = { path = "../../packages/trpc-client" }

[lints]
workspace = true
