[package]
name = "bunting-ledger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
[dependencies]
bunting-market-events = { path = "../market-events" }
bunting-market-types = { path = "../market-types" }
serde.workspace = true
[lints]
workspace = true
