[package]
name = "bunting-orderbook"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
orderbook-rs.workspace = true
pricelevel.workspace = true
uuid = { version = "=1.23.4", features = ["js"] }

[lints]
workspace = true
