[package]
name = "bunting-origin-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
bunting-ledger = { path = "../ledger" }
bunting-market-events.workspace = true
bunting-market-types.workspace = true
bunting-risk-engine = { path = "../risk-engine" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
