[package]
name = "quarcc-trading-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "WASM-safe Rust compatibility contract for the QUARCC trading engine"

[dependencies]
serde.workspace = true

[lints]
workspace = true
