[package]
name = "rit-market-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
