[package]
name = "bunting-edge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bunting-market-types = { path = "../../crates/market-types" }
bunting-orderbook = { path = "../../crates/orderbook" }
bunting-worker-cache = { path = "../../crates/worker-cache" }
serde.workspace = true
worker.workspace = true

[lints]
workspace = true
