[package]
name = "bunting-edge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bunting-command-transaction = { path = "../../crates/command-transaction" }
bunting-market-events.workspace = true
bunting-market-types = { path = "../../crates/market-types" }
bunting-orderbook = { path = "../../crates/orderbook" }
bunting-origin-store = { path = "../../crates/origin-store" }
bunting-worker-cache = { path = "../../crates/worker-cache" }
serde.workspace = true
serde_json.workspace = true
worker = { workspace = true, features = ["d1"] }

[lints]
workspace = true
