[package]
name = "nbc-matcher-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Development-only differential oracle for translated NBC matcher behavior"

[dependencies]
bunting-market-events.workspace = true
bunting-market-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
